# zeroctx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: zeroctx-fix-mismatch.md
.serena/: project.yml
hooks/: zeroctx-post-tool.sh  zeroctx-read.sh  zeroctx-rewrite.sh
src/: lib.rs  main.rs
src/agents/: analyzer.rs  build.rs  fetch.rs  mod.rs  reasoning.rs  router.rs  validator.rs
src/cli/: mod.rs  oneshot.rs  repl.rs
src/compression/: ast.rs  context_builder.rs  context_cache.rs  mod.rs
src/config/: mod.rs
src/core/: mismatch.rs  mod.rs  runner.rs  tracking.rs  types.rs
src/errors/: autofix.rs  mod.rs  patterns.rs
src/export/: convert.rs  csv_export.rs  html.rs  json.rs  mod.rs  pdf.rs
src/filters/: dotnet.rs  git.rs  javascript.rs  mod.rs  network.rs  python.rs  rust_tools.rs  system.rs  toml_filter.rs
src/hooks/: claude_code.rs  installer.rs  mod.rs  rewriter.rs
src/integration/: claude_api.rs  diff_applier.rs  mod.rs
src/languages/: dotnet.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs
tests/fixtures/: cargo_error_output.txt  git_diff_output.txt  npm_install_output.txt  sample.cs  sample.js  sample.py  sample.rs
tests/integration/: benchmark_tests.rs  compression_tests.rs  filter_tests.rs  mod.rs  v03_feature_tests.rs
