[package]
name = "zeroctx"
version = "0.2.3"
edition = "2021"
description = "Agent team that reduces AI coding assistant token usage by 40-60%"
license-file = "LICENSE"
repository = "https://github.com/emtyty/zeroctx"
keywords = ["ai", "llm", "token-optimization", "claude", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zero"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Error handling (zero unwraps in production)
anyhow = "1"
thiserror = "1"

# Pattern matching
regex = "1"
once_cell = "1"

# AST parsing (multi-language)
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c-sharp = "0.23"

# Rust AST (for Rust language support)
syn = { version = "2", features = ["full", "parsing"] }

# Database (session tracking + context cache)
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP (Claude API + web fetch)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime (parallel I/O workers)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing (context cache)
md-5 = "0.10"

# CSV export
csv = "1"

# Temp files (language validators)
tempfile = "3"

# Binary discovery (cross-platform which)
which = "7"

# Directory paths (cross-platform)
dirs-next = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# PDF export (optional, via HTML rendering)
# printpdf = "0.7"  # Enable when implementing PDF export

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
